test: update repository and service tests for new design